# perfpulse

./: .pre-commit-config.yaml  Dockerfile  README.md  deployment.yaml  pyproject.toml
src/perfpulse/: __init__.py
src/perfpulse/k8s/: __init__.py  jobs.py  kubectl.py
src/perfpulse/usersims/: __init__.py  swarp.py
