[project]
name = "perfpulse"
version = "0.1.0"
description = "Performance metrics for Science Platform"
readme = "README.md"
authors = [
    { name = "Shiny Brar", email = "shiny.brar@nrc-cnrc.gc.ca" }
]
requires-python = ">=3.10"
dependencies = [
    "fire>=0.7.0",
    "kubernetes>=31.0.0",
    "prometheus-client>=0.21.1",
]

[tool.ruff]
# Assume Python 3.9 syntax
target-version = "py39"
#Set the maximum line length
line-length = 120

[tool.ruff.lint]
# Enable specific rules for docstring checking and line length
select = [
    "D",  # Docstring conventions
    "E501",  # Line length
]

[tool.ruff.lint.pydocstyle]
# Use Google docstring convention
convention = "google"

[project.scripts]
perfpulse = "perfpulse:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
